--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,14 @@
     background-image: url('./images/hol2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: center;
     height: 100vh;
     width: 100vw;
     padding-top: 50px;
+    text-align:
+    color pink;
+    padding: 45px;
 }
 
 .socialBody {
