--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     background-image: url('./images/hol2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center;
     height: 100vh;
     width: 100vw;
@@ -125,6 +124,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     margin: 10px;
+    color: white;
 }
 
 .ulStyled {
