--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,10 @@
     min-height: 100vh;
     width: auto;
     padding-top: 50px;
-    padding: 45px;
+    /* padding: 45px; */
     direction: column;
-
+    justify-content: space-between;
+    align-items: center;
 }
 
 .socialBody {
@@ -49,27 +50,25 @@
 
 .ulTile {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     list-style-type: none;
     flex-wrap: wrap;
 
 }
 
 .tileHome {
-    width: 200px;
-    height: 100px;
+    width: 250px;
+    height: 400px;
     margin: 10px;
     flex-wrap: wrap;
-
 }
 
 .tileHome:hover {
-    width: 250px;
-    height: 150px;
+    width: 300px;
+    height: 450px;
     transform: translateY(-5px);
     box-shadow: 0 12px 16px #000000b8;
     transition: all 0.25s;
-
 }
 
 .ulPages {
@@ -242,3 +241,10 @@
     padding: 60px;
 }
 
+.tileText{
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
+
+}
